--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div id="links">
       <a class="link" href="https://youtube.com/polymars" target="_blank">
-        <i class="fab fa-youtube">&nbsp;</i> PolyMars
+        <i class="fab fa-youtube">&nbsp;</i> ePolyMars
       </a>
       <a class="link" href="https://youtube.com/polymars2" target="_blank">
         <i class="fab fa-youtube">&nbsp;</i> PolyMars++
