--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- Core theme CSS -->
     <link rel="stylesheet" href="style.css">
+    
+    <meta name="title" content="PolyMars">
+    <meta name="description" content="Social links of PolyMars">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="PolyMars">
+    <meta property="og:description" content="Social links of PolyMars">
+    <meta property="og:url" content="https://polymars.dev">
+    <meta property="twitter:title" content="PolyMars">
+    <meta property="twitter:description" content="Social links of PolyMars">
+    <meta property="twitter:url" content="https://polymars.dev">
   </head>
 
   <body>
@@ -22,7 +32,7 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture">
-      <img src="https://yt3.ggpht.com/ytc/AMLnZu-iyL3JRu73G0tnURQlYu8KUYu7zK1VV14fDFWoYA=s900-c-k-c0x00ffffff-no-rj" alt="Profile Picture">
+      <img src="https://yt3.ggpht.com/ytc/AMLnZu-iyL3JRu73G0tnURQlYu8KUYu7zK1VV14fDFWoYA=s900-c-k-c0x00ffffff-no-rj" alt="PolyMars Profile Picture">
     </a>
 
     <div id="userName">
