--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PolyMars</title>
     <!-- Favicon -->
-    <link rel="icon" href="https://yt3.ggpht.com/ytc/AMLnZu-iyL3JRu73G0tnURQlYu8KUYu7zK1VV14fDFWoYA=s900-c-k-c0x00ffffff-no-rj" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="https://yt3.ggpht.com/ytc/AMLnZu-iyL3JRu73G0tnURQlYu8KUYu7zK1VV14fDFWoYA=s900-c-k-c0x00ffffff-no-rj"
+      type="image/x-icon"
+    />
     <!-- Font Awesome icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    />
     <!-- Core theme CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -22,19 +29,27 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture">
-      <img src="https://yt3.ggpht.com/ytc/AMLnZu-iyL3JRu73G0tnURQlYu8KUYu7zK1VV14fDFWoYA=s900-c-k-c0x00ffffff-no-rj" alt="Profile Picture">
+      <img
+        src="https://yt3.ggpht.com/ytc/AMLnZu-iyL3JRu73G0tnURQlYu8KUYu7zK1VV14fDFWoYA=s900-c-k-c0x00ffffff-no-rj"
+        alt="Profile Picture"
+      />
     </a>
 
-    <div id="userName">
-      PolyMars
-    </div>
+    <div id="userName">PolyMars</div>
 
     <div id="links">
+      <a class="link" href="https://youtube.com/@PolyMarsLIVE" target="_blank">
+        <i class="fab fa-youtube">&nbsp;</i> PolyMars++
+      </a>
       <a class="link" href="https://youtube.com/polymars" target="_blank">
         <i class="fab fa-youtube">&nbsp;</i> PolyMars
       </a>
-      <a class="link" href="https://youtube.com/polymars2" target="_blank">
-        <i class="fab fa-youtube">&nbsp;</i> PolyMars++
+      <a
+        class="link"
+        href="https://www.instagram.com/polymarsdev"
+        target="_blank"
+      >
+        <i class="fab fa-instagram">&nbsp;</i> Instagram
       </a>
       <a class="link" href="https://twitch.tv/polymars" target="_blank">
         <i class="fab fa-twitch">&nbsp;</i> Twitch
@@ -42,16 +57,11 @@
       <a class="link" href="https://twitter.com/PolyMarsYT" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i> Twitter
       </a>
-      <a class="link" href="https://www.instagram.com/polymarsdev" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i> Instagram
-      </a>
       <a class="link" href="https://discord.gg/sGecnxuwxu" target="_blank">
         <i class="fab fa-discord">&nbsp;</i> Discord
       </a>
     </div>
 
-    <div id="footer">
-      Sponsors • polymarsdev@outlook.com
-    </div>
+    <div id="footer">Sponsors • polymarsdev@outlook.com</div>
   </body>
 </html>
