--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
       </a>
     </div>
 
-    <div id="footer">Sponsors • polymarsdev@outlook.com</div>
+    <div id="footer">Sponsors • polymars@greenlightgroup.co</div>
   </body>
 </html>
