--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Favicon -->
     <link
       rel="icon"
-      href="https://yt3.ggpht.com/ytc/AMLnZu-iyL3JRu73G0tnURQlYu8KUYu7zK1VV14fDFWoYA=s900-c-k-c0x00ffffff-no-rj"
+      href="https://yt3.googleusercontent.com/LMBd5SgPp5AmzCGMkbSwdzPquPdLdUdmGWVp1ugd9BasWiD7FXt0NYymskems9gE9FBpgESc=s900-c-k-c0x00ffffff-no-rj"
       type="image/x-icon"
     />
     <!-- Font Awesome icons -->
@@ -30,7 +30,7 @@
 
     <a id="profilePicture">
       <img
-        src="https://yt3.ggpht.com/ytc/AMLnZu-iyL3JRu73G0tnURQlYu8KUYu7zK1VV14fDFWoYA=s900-c-k-c0x00ffffff-no-rj"
+        src="https://yt3.googleusercontent.com/LMBd5SgPp5AmzCGMkbSwdzPquPdLdUdmGWVp1ugd9BasWiD7FXt0NYymskems9gE9FBpgESc=s900-c-k-c0x00ffffff-no-rj"
         alt="Profile Picture"
       />
     </a>
