--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Favicon -->
     <link
       rel="icon"
-      href="https://yt3.googleusercontent.com/LMBd5SgPp5AmzCGMkbSwdzPquPdLdUdmGWVp1ugd9BasWiD7FXt0NYymskems9gE9FBpgESc=s900-c-k-c0x00ffffff-no-rj"
+      href="https://cdn.discordapp.com/attachments/583714435458400291/1223043035126956154/image.png?ex=66186a96&is=6605f596&hm=cdd6aa9b61fc8d22d2a34ce1338e7286651deaf5e95b623d3fb7a40b050998fc&"
       type="image/x-icon"
     />
     <!-- Font Awesome icons -->
